@@ -31,6 +31,8 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 	- More updates to build files. [874831]
 	- Apply patch from http://www.fehcom.de/qmail/smtpauth.html
 	  to fix CRAM-MD5 SMTP AUTH in vchkpw. [871493]
+	- Have vchkpw.c use get_remote_ip() to convert IPv6 to IPv4
+	  (fixed problem with ::ffff: in relay file). [876019]
 
 	Bill Shupp
 	- Add -o option to vmoduser to set V_OVERRIDE flag. [875505]
